# infra

./: .devcontainer  .gemini  .gitignore  Cargo.toml  Justfile  README.md  labels.toml  renovate-config.js  renovate-shared-config.json  renovate.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: actions
.github/workflows/: build-devcontainer.yml  container-gc.yml  openssf-scorecard.yml  renovate.yml  rust.yml  sync-common.yml  sync-labels.yml  test-bootc-ubuntu-setup.yml
common/: AGENTS.md  README.md
common/.devcontainer/: devcontainer.json
common/.gemini/: config.yaml
common/.github/actions/bootc-ubuntu-setup/: action.yml
common/agents/tasks/: README.md  diff-quiz.md  perform-forge-review.md
common/agents/tasks/scripts/: forge-review-append-comment.sh  forge-review-start.sh  forge-review-submit-forgejo.sh  forge-review-submit-github.sh  forge-review-submit-gitlab.sh
crates/xtask/: Cargo.toml  README.md
crates/xtask/src/: container_gc.rs  xtask.rs
devenv/: .dockerignore  Containerfile  Containerfile.c10s  Containerfile.debian  README.md  devenv-init.sh  npm.txt  packages-c10s.txt  packages-common.txt  packages-debian.txt  packages.txt
scripts/sync-common/: Cargo.toml
scripts/sync-common/src/: main.rs
