[workspace]
members = ["crates/*"]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
debug = true

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xshell = "0.2"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

