# See https://github.com/matklad/cargo-xtask
[package]
name = "xtask"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[[bin]]
name = "xtask"
path = "src/xtask.rs"

[dependencies]
anyhow = { workspace = true }
xshell = { workspace = true }

[lints]
workspace = true

